--- a/index.html
+++ b/index.html
@@ -78,7 +78,7 @@
             </div>
         </main>
         <section class="my-5 w-75 mx-auto">
-            <h2 class="text-center my-4 text-danger">Some Asked Questions</h2>
+            <h2 class="text-center my-4 text-warning">Some Asked Questions</h2>
             <div class="accordion" id="accordionExample">
                 <div class="accordion-item">
                   <h2 class="accordion-header" id="headingOne">
@@ -89,7 +89,7 @@
                   <div id="collapseOne" class="accordion-collapse collapse show" aria-labelledby="headingOne" data-bs-parent="#accordionExample">
                     <div class="accordion-body">
                       <p>
-                        we use some engine for some browser to run javascript code. like <strong>v8 for chrome.</strong> reasone to use v8 engine, our computer dose not understand programing language. so we transform that code to machine code. as if that code understand computer machine. <strong>like if any chinese man talk to you and the same time, you don't undrerstand that language . when you need a translator </strong> and How works: when v8 engine gets javascript file fast of all it parser to syntax tree that called (AST)reasone to create syntex tree, javascript is a dynamic type language .and then reads and convart bytecode .and then run javascript file <br> ,But to execute more quickly .it executes this file by his own jast in time (JIS) compilar. and i am curious to know more then it.
+                        we use some engine for some browser to run javascript code. like <strong>v8 for chrome.</strong> reasone to use v8 engine, our computer dose not understand programing language. so we transform that code to machine code. as if that code understand computer machine. <strong>like if any chinese man talk to you and the same time, you don't undrerstand that language . when you need a translator </strong> and How works: when v8 engine gets javascript file fast of all it parser to syntax tree that called (AST)reasone to create syntex tree, javascript is a dynamic type language .and then reads and convart bytecode .and then run javascript file, <br>But to execute more quickly .it executes this file by his own jast in time (JIS) compilar. and i am curious to know more then it.
                       </p>
                     </div>
                   </div>
@@ -97,7 +97,7 @@
                 <div class="accordion-item">
                   <h2 class="accordion-header" id="headingTwo">
                     <button class="accordion-button collapsed" type="button" data-bs-toggle="collapse" data-bs-target="#collapseTwo" aria-expanded="false" aria-controls="collapseTwo">
-                        How does javascript event loop work?
+                        How does javascript event loop do?
                     </button>
                   </h2>
                   <div id="collapseTwo" class="accordion-collapse collapse" aria-labelledby="headingTwo" data-bs-parent="#accordionExample">
@@ -108,11 +108,36 @@
                     </div>
                   </div>
                 </div>
+                <div class="accordion-item">
+                  <h2 class="accordion-header" id="headingThree">
+                    <button class="accordion-button collapsed" type="button" data-bs-toggle="collapse" data-bs-target="#collapseThree" aria-expanded="false" aria-controls="collapseTwo">
+                        What is difference between local storage and session storage?
+                    </button>
+                  </h2>
+                  <div id="collapseThree" class="accordion-collapse collapse" aria-labelledby="headingThree" data-bs-parent="#accordionExample">
+                    <div class="accordion-body">
+                        <p>local storage and session storage are same but some difference between them</p>
+                        <ul>
+                            <h3>local storage</h3>
+                            <li>local storage's size is 10 mb but some say it is 5 mb</li>
+                            <li>local storage's data has deleted manually.it has not expiry</li>
+                            <li>local storage is saved and it is stay before we are deleted</li>
+                        </ul>  
+                        <ul>
+                            <h3>session storage</h3>
+                            <li>session storage's size is 5 md</li>
+                            <li>when teb is closed session stroage is clear cause it has expiry</li>
+                            <li>when we are open a new tab session storage is create a new storage</li>
+                        </ul>
+                    </div>
+                  </div>
+                </div>
               </div>
         </section>
-        <footer>
-            
+        <footer> 
+  
         </footer>
+        <!-- bootstrap script link -->
         <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/js/bootstrap.bundle.min.js" integrity="sha384-ka7Sk0Gln4gmtz2MlQnikT1wXgYsOg+OMhuP+IlRH9sENBO0LRn5q+8nbTov4+1p" crossorigin="anonymous"></script>
         <!-- add javascript  file  -->
         <script src="./js/app.js"></script>
